--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "cookies-next": "^6.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.12",
     "install": "^0.13.0",
     "jose": "^6.0.12",
     "js-cookie": "^3.0.5",
+    "ky": "^1.13.0",
     "lucide-react": "^0.522.0",
     "next": "15.3.4",
     "next-cloudinary": "^6.16.0",
