--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "zod": "^4.0.5"
   },
   "devDependencies": {
+     "@svgr/webpack": "^8.1.0",
     "@eslint/eslintrc": "^3",
     "@rocketseat/eslint-config": "^2.2.2",
     "@stylistic/eslint-plugin": "^5.5.0",
